Refactor stripe.js and package.json
- Add createOnboardingLink function to create Express Onboarding Link
- Add createStandardOnboardingLink function to create Standard Onboarding Link
- Add updateAccountSettings function to update Account Settings
- Add getAccount function to retrieve Account information
- Add deleteAccount function to delete Account
- Add getAllAccounts function to retrieve all Accounts
- Add createPayment function to create payment for a connected account
- Update dependencies in package.json: stripe to version 17.5.0 and add uuid version 9.0.0

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "aws-sdk": "^2.1692.0",
     "serverless-dotenv-plugin": "^6.0.0",
-    "stripe": "^17.5.0"
+    "stripe": "^17.5.0",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "deploy": "serverless deploy --stage dev",
