--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.7.9",
     "serverless-dotenv-plugin": "^6.0.0",
     "stripe": "^17.5.0",
     "uuid": "^9.0.0"
